--- a/src/components/Character/Character.css
+++ b/src/components/Character/Character.css
@@ -11,11 +11,17 @@
   width: 60%;
 }
 
-#card-button {
+/* #card-button {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-}
+  align-items: center;
+  border: 1px solid black;
+  background-color: black;
+  color: yellow;
+  border-radius: 20%;
+  width: 90%;
+} */
 
 #empty-profile {
   height: 10%;
