--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -1,3 +1,12 @@
+/* #movie-card-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 1px solid black;
+  background-color: black;
+  color: yellow;
+} */
+
 .released-tag {
   font-weight: 600;
 }
