--- a/src/components/MoviesList/MoviesList.css
+++ b/src/components/MoviesList/MoviesList.css
@@ -1,3 +1,8 @@
+#movies-list-wrapper {
+  border-top: 1px solid black;
+  margin: 1% 3%;  
+}
+
 #movies-list-title {
   text-decoration: underline;
 }
